# linux-wallpaperengine

./: CMakeLists.txt
docs/superpowers/plans/: 2026-06-06-dde-plugin.md
docs/superpowers/specs/: 2026-06-06-dde-plugin-design.md
plugins/wallpaper-engine-proxy/: CMakeLists.txt  DBusClient.cpp  DBusClient.h  DDEEventBridge.cpp  DDEEventBridge.h  SettingsDialog.qml  TransitionOverlay.qml  WallpaperEnginePlugin.cpp  WallpaperEnginePlugin.h  WallpaperListModel.cpp  WallpaperListModel.h  main.qml  metadata.json
src/: main.cpp
src/WallpaperEngine/DDE/: DBusService.cpp  DBusService.h  DDEConfigBridge.cpp  DDEConfigBridge.h  DDEOverlayOutput.cpp  DDEOverlayOutput.h  MonitorTracker.cpp  MonitorTracker.h  WorkspaceManager.cpp  WorkspaceManager.h
src/WallpaperEngine/Data/Builders/: ColorBuilder.cpp
